@@ -9,34 +9,39 @@ import ifTG.travelPlan.repository.springdata.post.PostScrapRepository;
 import ifTG.travelPlan.repository.springdata.post.PostImgRepository;
 import ifTG.travelPlan.repository.springdata.travel.DestinationScrapRepository;
 import ifTG.travelPlan.service.filestore.PostImgFileService;
+import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
 @Slf4j
 @RequiredArgsConstructor
 public class UserScrapServiceImpl implements UserScrapService {
-    static class CountAndThumbnail{
-        private Integer count;
-        private String thumbnailUri;
-
-        public CountAndThumbnail(String thumbnailUri){
-            this.thumbnailUri = thumbnailUri;
-            this.count = 1;
-        }
-        public void increaseCount(){
-            this.count++;
-        }
-    }
     private final PostScrapRepository postScrapRepository;
     private final DestinationScrapRepository destinationScrapRepository;
-    private final PostImgRepository postImgRepository;
-    private final PostImgFileService postImgFileService;
+
+    @Getter
+    static class CountAndThumbnail{
+        private Integer count;
+        private final List<String> thumbnailUri = new ArrayList<>();
+
+        public CountAndThumbnail(){
+            this.count = 1;
+        }
+        public CountAndThumbnail increaseCount(){
+            this.count++;
+            return this;
+        }
+        public void addThumbnailUri(String uri){
+            this.thumbnailUri.add(uri);
+        }
+    }
 
     @Override
     public List<UserScrapFolderDto> findAllScrapFolderByUser(Long userId) {
@@ -44,44 +49,36 @@ public class UserScrapServiceImpl implements UserScrapService {
         List<DestinationScrap> destinationScrapList = destinationScrapRepository.findAllWithDestinationByUserId(userId);
         Map<String, CountAndThumbnail> scrapFolder = new HashMap<>();
 
+        postScrapList.forEach(ps->{
+            if (scrapFolder.containsKey(ps.getFolderName())){
+                CountAndThumbnail ct = scrapFolder.get(ps.getFolderName());
+                ct.increaseCount();
+            }else{
+                CountAndThumbnail ct = new CountAndThumbnail();
+                scrapFolder.put(ps.getFolderName(), ct);
+            }
+        });
         destinationScrapList.forEach(ds->{
             if (scrapFolder.containsKey(ds.getFolderName())){
-                CountAndThumbnail updateCT = scrapFolder.get(ds.getFolderName());
-                updateCT.increaseCount();
-                if (updateCT.thumbnailUri.isEmpty()){
-                    updateCT.thumbnailUri = ds.getDestination().getThumbNail();
-                }
+                CountAndThumbnail ct = scrapFolder.get(ds.getFolderName());
+                ct.increaseCount();
+                ct.addThumbnailUri(ds.getDestination().getThumbNail());
             }else{
-                scrapFolder.put(ds.getFolderName(), new CountAndThumbnail(ds.getDestination().getThumbNail()));
+                CountAndThumbnail ct = new CountAndThumbnail();
+                ct.addThumbnailUri(ds.getDestination().getThumbNail());
+                scrapFolder.put(ds.getFolderName(), ct);
             }
         });
 
-        postScrapList.forEach(ps-> {
-            if (scrapFolder.containsKey(ps.getFolderName())){
-                scrapFolder.get(ps.getFolderName()).increaseCount();
-                if (scrapFolder.get(ps.getFolderName()).thumbnailUri.isEmpty()){
-                    Optional<PostImg> postImg =  postImgRepository.findFirstByPostIdAndIsThumbnail(ps.getPost().getId(), true);
-                    postImg.ifPresent(img -> scrapFolder.get(ps.getFolderName()).thumbnailUri = postImgFileService.getPostThumbnailUrl(
-                            img.getPost().getId(), img.getFileName()
-                    ));
-                }
-            }else{
-                scrapFolder.put(ps.getFolderName(), new CountAndThumbnail(null));
-                Optional<PostImg> postImg =  postImgRepository.findFirstByPostIdAndIsThumbnail(ps.getPost().getId(), true);
-                postImg.ifPresent(img -> scrapFolder.get(ps.getFolderName()).thumbnailUri = postImgFileService.getPostThumbnailUrl(
-                        img.getPost().getId(), img.getFileName()
-                ));
-            }
-        });
-
-        return scrapFolder.keySet().stream().map(sf -> new UserScrapFolderDto(sf, scrapFolder.get(sf).count, scrapFolder.get(sf).thumbnailUri)).toList();
+        return scrapFolder.keySet().stream().map(sf->new UserScrapFolderDto(sf, scrapFolder.get(sf).count, scrapFolder.get(sf).thumbnailUri)).collect(Collectors.toList());
     }
 
     @Override
     @Transactional
-    public List<UserScrapFolderDto> renameScrapFolder(RequestRenameScrapFolder dto) {
-        destinationScrapRepository.updateFolderName(dto.getOldFolderName(), dto.getNewFolderName());
-        return findAllScrapFolderByUser(dto.getUserId());
+    public List<UserScrapFolderDto> renameScrapFolder(Long userId, RequestRenameScrapFolder dto) {
+        destinationScrapRepository.updateFolderName(userId, dto.getOldFolderName(), dto.getNewFolderName());
+        postScrapRepository.updateFolderName(userId, dto.getOldFolderName(), dto.getNewFolderName());
+        return findAllScrapFolderByUser(userId);
     }
 
 
